# chiemeka_alim-SDK

./: .env.tpl  .gitignore  Makefile  README.md  design.md  pyproject.toml  requirements.in  requirements.txt
lotr/: client.py  constants.py  endpoints.py  session.py
src/lord_aubrey_of_the_rings.egg-info/: PKG-INFO  SOURCES.txt
src/lotr/: client.py  endpoints.py
test/: conftest.py  test_chapter.py  test_movies.py  test_quotes.py
test/endpoints/: test_books.py  test_characters.py
