[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lord-aubrey-of-the-rings"
version = "0.0.1"
authors = [
  { name="Chiemeka Alim", email="lord.chiemy@gmail.com" },
]
license = { file = "LICENSE" }
description = "A small lord of the rings sdk"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["sdk", "lord of the rings", "the one api"]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
"API" = "https://the-one-api.dev/"